Update Chooser.java